chore(refactoring): NEW/OLD to STAGING/PROD

--- a/api-spec/event-dispatcher-api.yaml
+++ b/api-spec/event-dispatcher-api.yaml
@@ -194,8 +194,8 @@ components:
       type: string
       description: the event receiver deployment verison
       enum:
-        - OLD
-        - NEW
+        - STAGING
+        - PROD
   requestBodies:
     EventReceiverCommandRequest:
       required: true
