--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -94,7 +94,7 @@ redisStream.eventController.consumerGroupPrefix=${REDIS_STREAM_EVENT_CONTROLLER_
 redisStream.eventController.consumerNamePrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX}
 redisStream.eventController.failOnErrorCreatingConsumerGroup=${REDIS_STREAM_EVENT_CONTROLLER_FAIL_ON_ERROR_CREATING_CONSUMER_GROUP:true}
 eventController.status.pollingChron=${EVENT_CONTROLLER_STATUS_POLLING_CHRON}
-eventController.deploymentVersion=${DEPLOYMENT_VERSION:NEW}
+eventController.deploymentVersion=${DEPLOYMENT_VERSION:PROD}
 
 spring.task.scheduling.pool.size=5
 
